Vectorize EqualPowerPanner::pan() https://bugs.webkit.org/show_bug.cgi?id=231458

Reviewed by Eric Carlson.

Vectorize EqualPowerPanner::pan() for performance. This is used by PannerNode.

* platform/audio/EqualPowerPanner.cpp:
(WebCore::EqualPowerPanner::pan):


Canonical link: https://commits.webkit.org/242733@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@283855 268f45cc-cd09-0410-ab3c-d52691b4dbfc